metadata/objects/Large_Object__c.object
<CustomObject>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>A-{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Execution_Unique_Key__c</fullName>
        <externalId>true</externalId>
        <label>Execution Unique Key</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRAX_Schedule_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GRAX Schedule Process</label>
        <referenceTo>GRAX_Schedule_Process__c</referenceTo>
        <relationshipLabel>Large Objects</relationshipLabel>
        <relationshipName>Large_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Some_Datetime__c</fullName>
        <label>Some Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Some_Number__c</fullName>
        <label>Some Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Large Object</label>
    <nameField>
        <label>Large Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Large Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>